--- a/src/scss/base/_color.scss
+++ b/src/scss/base/_color.scss
@@ -1,3 +1,6 @@
 //colors
-$color-main:#7414a7;
+$color-main:#3eaef4;
+$color-main-darker:#1f70a2;
 $color-default:#a3a3a3;
+$color-light:#dddddd;
+$color-lighter:#efefef;
