--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,9 +8,11 @@
 @import 'base/_value';
 //components
 @import 'components/_button';
+@import 'components/_upperlink';
 @import 'components/_hr';
 @import 'components/_input';
 @import 'components/_main';
+@import 'components/_loading';
 //layout
 @import 'layout/_connection';
 @import 'layout/_wrapper';
@@ -23,4 +25,4 @@
 @import 'themes/_main-theme';
 //utils
 @import 'utils/_utils';
-//oooalaaa
+//oooalaaaqaaa*aaaaaaaaaaqaaaa
