--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -1,1 +1,20 @@
+input,
+textarea {
+    padding: 15px;
+    border: none;
+    margin-bottom: 15px;
+    background-color: $color-lighter;
+    resize: none;
+}
 
+input[type='submit'] {
+    background-color: $color-main;
+    color: white;
+    text-transform: uppercase;
+}
+
+textarea {
+    line-height: 1.2em;
+    font-size: 1em;
+    font-weight: 300;
+}
