reorder and move element

--- a/src/scss/base/_color.scss
+++ b/src/scss/base/_color.scss
@@ -1,5 +1,7 @@
 //colors
 $color-main:#3eaef4;
+$color-main-100:rgba(62, 174, 244, 1);
+$color-main-0:rgba(62, 174, 244, 0);
 $color-main-darker:#1f70a2;
 $color-default:#a3a3a3;
 $color-light:#dddddd;
