--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,16 +7,14 @@
 @import 'base/_font';
 @import 'base/_value';
 //components
-@import 'components/_button';
 @import 'components/_upperlink';
 @import 'components/_hr';
 @import 'components/_input';
 @import 'components/_main';
 @import 'components/_loading';
+@import 'components/_hovered';
 //layout
-@import 'layout/_connection';
 @import 'layout/_wrapper';
-@import 'layout/_container';
 @import 'layout/_write';
 @import 'layout/_entry';
 //pages
@@ -25,4 +23,4 @@
 @import 'themes/_main-theme';
 //utils
 @import 'utils/_utils';
-//oooalaaaqaaa*aaaaaaaaaaqaaaa
+//oooalaaaqaaa*aaaaaaaaaaqaaaaaaaaaaaaaaaaaaaa
