--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -1,17 +1,21 @@
 .float-left {
-	float: left;
+    float: left;
 }
 
 .float-right {
-	float: right;
+    float: right;
 }
 
 .huge {
-	font-size: $font-size-huge;
+    font-size: $font-size-huge;
 }
 
 .center-h {
-	position: absolute;
-	transform: translateX(-50%);
-	left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+}
+
+.hidden {
+    display: none;
 }
