--- a/src/scss/base/_value.scss
+++ b/src/scss/base/_value.scss
@@ -3,5 +3,6 @@ $margin-simple: 10px;
 //padding
 $padding-simple: 10px;
 $padding-big: 20px;
+$padding-border-page: 25px;
 //border-radius
 $border-radius: 5px;
