--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -8,6 +8,8 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: -1;
+    background: url("/build/images/pattern.png") no-repeat center;
+    background-size: cover;
 }
 
 .half {
