--- a/src/scss/base/_font.scss
+++ b/src/scss/base/_font.scss
@@ -1,10 +1,10 @@
 //font-size
 $font-size-huge:10vw;
-$font-size-very-big: 30px;
-$font-size-big: 22px;
-$font-size: 18px;
-$font-size-small: 14px;
-$font-size-very-small: 10px;
+$font-size-very-big: 1.4em;
+$font-size-big: 1.1em;
+$font-size: 0.9em;
+$font-size-small: 0.75em;
+$font-size-very-small: 0.6em;
 //font-family
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,500,700');
 $font-main: 'Poppins',
