--- a/src/scss/components/_upperlink.scss
+++ b/src/scss/components/_upperlink.scss
@@ -6,7 +6,7 @@
     .number {
         position: absolute;
         top: -20px;
-        right: -10px;
+        padding-left: 5px;
         cursor: pointer;
         font-size: 0.8em;
         &:hover {
