--- a/src/scss/layout/_write.scss
+++ b/src/scss/layout/_write.scss
@@ -7,6 +7,13 @@
     }
     .container {
         margin-left: 7.5px;
+        @media (max-width: 1000px) and (min-width:600px) {
+            margin-left: 25px;
+        }
+        @media (max-width: 600px) {
+            margin: 25px 0;
+            padding: $padding-simple;
+        }
         form {
             flex-grow: 1;
             display: flex;
